# effactory

./: .gitignore  CMakeLists.txt  MAKEFILE  Makefile  README.md
examples/: CMakeLists.txt  playvideo.cpp
include/redakt/display/: videodisplay.hpp
src/display/: videodisplay.cpp  videoplayer.cpp
